--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 td,
@@ -10,7 +16,10 @@ th {
   text-align: left;
   padding: 8px;
 }
-
+h2 {
+  font-size: 1.4em;
+  font-weight: 500;
+}
 /* default styling provided
 
 body {
