--- a/src/views/WorkoutQueueView/WorkoutQueueView.css
+++ b/src/views/WorkoutQueueView/WorkoutQueueView.css
@@ -1,3 +1,88 @@
-h1 {
+.timer-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.timer-item {
+    background: #eee;
+    color: black;
+    padding: 8px;
+    margin-bottom: 8px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 480px;
+}
+
+.timer-item:last-child {
+    margin-bottom: 0;
+}
+
+.timer-item .timer-info {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.timer-item .timer-info .timer-type {
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-size: 0.9em;
+    font-weight: 500;
+}
+
+.timer-item .timer-info .timer-details {
+    display: flex;
+    align-items: baseline;
+    gap: 8px;
+}
+
+.timer-item .timer-info .timer-details span {
+    background: #dddddd;
+    color: #3e3e3e;
+    padding: 4px 10px;
+    border-radius: 4px;
+}
+
+.timer-item .remove-button {
+    background-color: #f8446e;
+    border: none;
+    padding: 8px 16px;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.timer-item .remove-button:hover {
+    background-color: #d84567;
+}
+
+.workout-title {
+    color: #ff698c;
+    margin-bottom: 24px;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    letter-spacing: 0.1rem;
+  }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    margin-top: 20px;
+  }
+
+.workout {
+    background-color: #000;
+    color: #FFF;
+    border-radius: 16px;
+    padding: 20px;
+    font-size: 16px;
+    height: auto;
+    width: 280px;
+    padding: 32px;
     text-align: center;
 }
