--- a/src/components/generic/RadioButtons/RadioButtons.css
+++ b/src/components/generic/RadioButtons/RadioButtons.css
@@ -1,7 +1,8 @@
 .radio-group label {
   font-weight: 400;
   display: block;
-  margin-bottom: 10px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 .radio {
